test/tests/compiler/11_long_integers/invalid_types/conflicting_function_types.plx
#  It's illegal to declare a function multiple times with different parameter types 

pub fn foo(a: i32) i32;

pub fn main(none) i32 {
    return false
}

pub fn foo(a: i64) i32;
